# cli-temple

./: .gitignore  .gitmessage  Cargo.toml  README.md  flake.nix
.cursor/rules/: commit-message.mdc
.github/workflows/: release.yml
docs/: design-musings.md
project/: providers.tf  repository.tf
src/: config.rs  lib.rs  main.rs  render.rs  template.rs
tests/: create.rs  help.rs  render.rs  smoke.rs
