[package]
name = "temple"
version = "0.1.0"
edition = "2024"
description = "A small, easy-to-use CLI tool for structured templating with support for complex configurations like color schemes"
homepage = "https://github.com/zabronax/cli-temple"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
handlebars = "6.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
